--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
